# punkapi

./: .coveragerc  .gitignore  BUILD.md  Dockerfile  LICENSE  README.md  amvera.yml  app.py  docker-compose.yml  locustfile.py  otel-collector-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
data/: 001.json  002.json  004.json  006.json  007.json  008.json  009.json  010.json  012.json  013.json  014.json  016.json  017.json  020.json  022.json  024.json  025.json  028.json  029.json  031.json  032.json  033.json  038.json  039.json  040.json  043.json  046.json  049.json  050.json  057.json  059.json  060.json  061.json  062.json  064.json  067.json  068.json  069.json  071.json  073.json  (+200 more)
db/: database.py  schema.json
punkapi/: app.py
punkapi/api/v3/: router.py
punkapi/db/: database.py  models.py  schema.json
punkapi/repository/: repository.py
punkapi/repository/dao/: dao.py  filters.py
punkapi/repository/utils/: curry.py
punkapi/resources/data/: 003.json  005.json  011.json  015.json  018.json  019.json  021.json  023.json  026.json  027.json  030.json  034.json  035.json  036.json  037.json  041.json  042.json  044.json  045.json  047.json  048.json  051.json  052.json  053.json  (+188 more)
punkapi/service/: beer_service.py  router.py
repository/: repository.py
repository/dao/: dao.py  filters.py
repository/utils/: date.py  string.py
service/: router.py  routes.py
service/api/: about.py  beer.py  beers.py  image.py  random.py
tests/: conftest.py  test_app.py  test_beer_filters.py  test_beer_id.py  test_beer_image.py  test_per_page.py  test_performance.py  test_schema.py
tests/api/: test_beer_filters.py
tests/integration/: test_random_beer.py  test_router.py  test_schema.py
(+11 files in other folders)
